<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/ic_launcher"
        tools:context=".LoginFragment">

        <TextView
            android:id="@+id/infotext"
            android:layout_width="387dp"
            android:layout_height="61dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:drawable/editbox_background_normal"
            android:fontFamily="@font/roboto"
            android:text="@string/logintext"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/inputusername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="109dp"
            android:layout_height="47dp"
            android:text="@string/hintusername"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/background_light"
            android:textSize="@dimen/loginsize"
            app:layout_constraintBaseline_toBaselineOf="@+id/inputusername"
            app:layout_constraintEnd_toStartOf="@+id/inputusername"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/inputusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/hintusername"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            android:textSize="@dimen/loginsize"
            app:layout_constraintBottom_toTopOf="@+id/inputpassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/infotext" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="114dp"
            android:layout_height="39dp"
            android:text="@string/hintpassword"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/background_light"
            android:textSize="@dimen/loginsize"
            app:layout_constraintBaseline_toBaselineOf="@+id/inputpassword"
            app:layout_constraintEnd_toStartOf="@+id/inputpassword"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/inputpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/hintpassword"
            android:inputType="textPassword"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            android:textSize="@dimen/loginsize"
            app:layout_constraintBottom_toTopOf="@+id/loginbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/inputusername" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="100dp"
            android:background="@android:drawable/button_onoff_indicator_on"
            android:text="@string/logintext"
            android:textSize="@dimen/loginsize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/inputpassword"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/inputpassword"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/show"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>