<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="myCar1" type="com.example.carslot.MyCar"/>
        <variable name="myCar2" type="com.example.carslot.MyCar"/>
        <variable name="myCar3" type="com.example.carslot.MyCar"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_slot1" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/button_slot2"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_slot2" android:layout_marginLeft="@dimen/magin10"
            android:layout_marginRight="5dp" android:background="@android:color/holo_blue_light"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_slot2"
            app:layout_constraintStart_toEndOf="@+id/button_slot1" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button_slot3" android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
            android:background="@android:color/holo_blue_light"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_slot3"
            app:layout_constraintStart_toEndOf="@+id/button_slot2" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBaseline_toBaselineOf="@+id/button_slot2"
            android:layout_marginLeft="5dp" android:layout_marginRight="10dp"
            android:background="@android:color/holo_blue_light"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/text_serial"
            app:layout_constraintTop_toBottomOf="@+id/button_slot2"
            app:layout_constraintBottom_toTopOf="@+id/text_brand" android:layout_marginTop="8dp"
            android:textAlignment="center" android:textAllCaps="false" android:hint="Serial number"
            app:layout_constraintEnd_toEndOf="@+id/text_name" app:layout_constraintStart_toStartOf="@+id/text_name"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/text_brand"
            app:layout_constraintTop_toBottomOf="@+id/text_serial"
            app:layout_constraintBottom_toTopOf="@+id/text_name" android:textAlignment="center"
            android:textAllCaps="false" android:hint="Brand"
            app:layout_constraintEnd_toEndOf="@+id/text_name" app:layout_constraintStart_toStartOf="@+id/text_name"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/text_name"
            app:layout_constraintTop_toBottomOf="@+id/text_brand"
            app:layout_constraintBottom_toTopOf="@+id/button_con" android:textAlignment="center"
            android:textAllCaps="false" android:hint="@string/Name" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:text="@string/Comfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_con"
            app:layout_constraintTop_toBottomOf="@+id/text_name"
            app:layout_constraintBottom_toTopOf="@+id/button_del" app:layout_constraintStart_toStartOf="@+id/text_name"
            app:layout_constraintEnd_toEndOf="@+id/text_name" android:textColor="@android:color/black"
            android:shadowColor="@color/colorAccent" android:background="@android:color/holo_green_light"/>
        <Button
            android:text="@string/Delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_del"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/button_con"
            app:layout_constraintStart_toStartOf="@+id/text_name" app:layout_constraintEnd_toEndOf="@+id/text_name"
            android:textColorHighlight="@color/colorAccent" android:textColor="@android:color/black"
            android:background="@android:color/holo_red_light"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>